<android.support.v7.widget.CardView
    android:id="@+id/cv"
    style="@style/CardStyle.Home"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_white_rounded_rect"
        android:orientation="vertical">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            app:riv_corner_radius_bottom_left="0dp"
            app:riv_corner_radius_bottom_right="0dp"
            app:riv_corner_radius_top_left="@dimen/card_corner_radius"
            app:riv_corner_radius_top_right="@dimen/card_corner_radius" />>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextStyle.Title"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_spacing_small"
            android:hint="@string/material_theme_current_theme">

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_spacing_small"
            android:hint="@string/login_text"
            android:theme="@style/AppTheme.Green">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="michael.littlefoot"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_spacing_small"
            android:hint="@string/login_passwd"
            android:theme="@style/AppTheme.Green">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="**********"/>

        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_spacing_extra_small"
            android:text="@string/login_btn"
            android:onClick="authenticateLogin"
            android:theme="@style/AppTheme.Green"/>
    </LinearLayout>
</android.support.v7.widget.CardView>



